--- a/_layouts/umcs/umcslist-category.html
+++ b/_layouts/umcs/umcslist-category.html
@@ -9,16 +9,16 @@ show_sidebar: false
     </div>
 
     {% if page.collection %}
-        {% assign sorted_applistings = site.[page.collection] | sort: page.sort %}
+        {% assign sorted_umcslistings = site.[page.collection] | sort: page.sort %}
     {% else %}
-        {% assign sorted_applistings = site.applistings | sort: page.sort %}
+        {% assign sorted_umcslistings = site.umcslistings | sort: page.sort %}
     {% endif %}
 
-    {% for applist in sorted_applistings %}
+    {% for applist in sorted_umcslistings %}
         <div class="column is-4-desktop is-6-tablet">
             <a href="{{ applist.url | relative_url }}">
                 <div style="border: 3px outset wheat" class="card">
-                    {% if applist.image %}
+                    {% if umcslist.image %}
                         <div class="card-image">
                             <figure class="image is-4by3">
                                 <img src="{{ applist.image }}" alt="{{ applist.title }}">
@@ -26,14 +26,14 @@ show_sidebar: false
                         </div>
                     {% endif %}
                     <div class="card-content">
-                        <p class="title is-4">{{ applist.title }}</p>
-                        <p class="subtitle is-4">{{ applist.subtitle }}</p></br>
+                        <p class="title is-4">{{ umcslist.title }}</p>
+                        <p class="subtitle is-4">{{ umcslist.subtitle }}</p></br>
                        <!--
-                        <div style="float: left"><p>{% if applist.download %}
+                        <div style="float: left"><p>{% if umcslist.download %}
                             <script>
                             function download_link() {
                                 var bits = ["https://"];
-                                bits.push("{{ applist.download }}");
+                                bits.push("{{ umcslist.download }}");
                                 var url = bits.join("");
                                 document.getElementById("dllink").setAttribute("href",url);
                                 }
@@ -41,7 +41,7 @@ show_sidebar: false
                             </script>
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
-                        <div style="float: right"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                        <div style="float: right"><p class="title is-5 has-text-right">{{ umcslist.version }}</p></div></br></br>
                     </div>
                 </div>
             </a>
