--- a/_layouts/umcs-category.html
+++ b/_layouts/umcs-category.html
@@ -2,32 +2,46 @@
 layout: default
 show_sidebar: false
 ---
+
 <div class="columns is-multiline">
     <div class="column is-12">
         {{ page.content }}
     </div>
 
     {% if page.collection %}
-        {% assign sorted_umcss = site.[page.collection] | sort: page.sort %}
+        {% assign sorted_umcslistings = site.[page.collection] | sort: page.sort %}
     {% else %}
-        {% assign sorted_umcss = site.umcss | sort: page.sort %}
+        {% assign sorted_umcslistings = site.umcslistings | sort: page.sort %}
     {% endif %}
 
-    {% for umcs in sorted_umcss %}
+    {% for applist in sorted_applistings %}
         <div class="column is-4-desktop is-6-tablet">
-            <a href="{{ umcs.url | relative_url }}">
-                <div class="card">
-                    {% if umcs.image %}
+            <a href="{{ applist.url | relative_url }}">
+                <div style="border: 3px outset wheat" class="card">
+                    {% if applist.image %}
                         <div class="card-image">
                             <figure class="image is-4by3">
-                                <img src="{{ umcs.image }}" alt="{{ umcs.title }}">
+                                <img src="{{ applist.image }}" alt="{{ applist.title }}">
                             </figure>
                         </div>
                     {% endif %}
                     <div class="card-content">
-                        <p class="title is-4">{{ umcs.title }}</p>
-                        <p class="subtitle is-4">{{ umcs.subtitle }}</p>
-                        <p class="title is-5 has-text-right">{{ umcs.price }}</p>
+                        <p class="title is-4">{{ applist.title }}</p>
+                        <p class="subtitle is-4">{{ applist.subtitle }}</p></br>
+                       <!--
+                        <div style="float: left"><p>{% if applist.download %}
+                            <script>
+                            function download_link() {
+                                var bits = ["https://"];
+                                bits.push("{{ applist.download }}");
+                                var url = bits.join("");
+                                document.getElementById("dllink").setAttribute("href",url);
+                                }
+                                download_link();
+                            </script>
+                            <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
+                            {% endif %}</p></div> -->
+                        <div style="float: right"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
                     </div>
                 </div>
             </a>
