--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     </body>
     <style>
 body {
-    background-image: url("https://wallpapercave.com/wp/wp4849630.jpg");
+    background-image: url("/assets/images/sas-apps-archive.bg");
     background-position: no-repeat;
     background-size: cover;
 </style>
