--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     </body>
     <style>
 body {
-    background-image: url("/assets/images/sas-apps-archive-bg.jpg");
+    background-image: url("https://github.com/ps2wiki/sas-apps-archive/blob/upstream/assets/images/sas-apps-archive-bg.jpg?raw=true");
     background-position: no-repeat;
     background-size: cover;
 </style>
