--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -54,7 +54,7 @@ layout: default
 
     <!-- Download -->
     <div>
-    <a class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</a>
+    <button class="download_btn" id="downloadBtn" onclick="goToUrl()" disabled><i style='color: wheat' class='fas fa-download'></i> Download</button>
     </div>
     
     <script>
@@ -186,7 +186,7 @@ layout: default
                 alert('Please select fork and version before proceeding!');
             }
         }
-    </script></br>
+    </script></br></div>
   
 <div style="align-self: center">
 {% if page.visit_project %}
