--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -42,10 +42,10 @@ layout: default
 <div style="flow: left; margin-right: 10px" class="applist-multi_button_flex"><div style="align-self: center; margin-right: 10px">
         <select style="margin-right: 10px" class="download_btn" id="firstMenu" onchange="updateSecondMenu()">
         <option value="">Select fork</option>
-        <option value="game_id">Game ID</option>
+        <option value="game_id">GameID Fork</option>
         <option value="grimdoomer">Grimdoomer's Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
-        <option value="dailybuilds">⚠️ OPL 10th Anniversary (Daily Builds) ⚠️</option>
+        <option value="dailybuilds">⚠️ OPL 10th Anniversary (DB) ⚠️</option>
         </select></div>
 
         <div><select style="margin-right: 10px" class="download_btn" id="secondMenu">
