--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -41,7 +41,7 @@ layout: default
     <p class="title is-5 has-text-left">Select version of {{ page.title }} to download:</p></br>
 <div style="flow: left; margin-right: 10px" class="applist-multi_button_flex"><div style="align-self: center; margin-right: 10px">
         <select style="margin-right: 10px" class="download_btn" id="firstMenu" onchange="updateSecondMenu()">
-        <option value="">Select fork</option>
+        <option value="">Select Fork</option>
         <option value="game_id">GameID Fork</option>
         <option value="grimdoomer">Grimdoomer's Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
@@ -49,7 +49,7 @@ layout: default
         </select></div>
 
         <div><select style="margin-right: 10px" class="download_btn" id="secondMenu">
-            <option value="">Select version</option>
+            <option value="">Select Version</option>
         </select></div>
 
     <!-- Download -->
