--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -45,7 +45,7 @@ layout: default
         <option value="game_id">GameID Fork</option>
         <option value="grimdoomer">Grimdoomer's Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
-        <option value="dailybuilds">⚠️ OPL 10th Anniversary (DB) ⚠️</option>
+        <option value="dailybuilds">⚠️ 10th Anniversary (DB) ⚠️</option>
         </select></div>
 
         <div><select style="margin-right: 10px" class="download_btn" id="secondMenu">
