--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -39,7 +39,7 @@ layout: default
     
 <div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Select version of {{ page.title }} to download:</p></br>
-<div style="flow: left; margin-right: 10px" class="applist-multi_button_flex"><div style="align-self: center">
+<div style="flow: left; margin-right: 10px" class="applist-multi_button_flex"><div style="align-self: left">
         <select style="margin-right: 10px" class="download_btn" id="firstMenu" onchange="updateSecondMenu()">
         <option value="">Select Fork</option>
         <option value="game_id">GameID Fork</option>
