--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -46,11 +46,11 @@ layout: default
         <option value="grimdoomer">Grimdoomer's Fork</option>
         <option value="krahjohlito">KrahJohlito's Fork</option>
         <option value="dailybuilds">⚠️ 10th Anniversary</option>
-        </select></div>
+        </select></div></br>
 
         <div><select style="margin-right: 10px" class="download_btn" id="secondMenu">
             <option value="">Select Version</option>
-        </select></div>
+        </select></div></br>
 
     <!-- Download -->
     <div>
