--- a/_layouts/applist.html
+++ b/_layouts/applist.html
@@ -38,7 +38,7 @@ layout: default
         
 <div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Download {{ page.title }}:</p></br>
-<div style="flow: left" class="applist-multi_button_flex"><div style="align-self: center; margin-right: 10px">
+<div style="flow: left" class="applist-multi_button_flex">
 {% if page.download %}
 <script>
     function download_link() {
@@ -49,9 +49,10 @@ layout: default
     }
     download_link();
 </script>
-<a id="dllink" href="" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
-                {% endif %}</div></br>
-<div style="align-self: center">
+<div style="align-self: left; margin-right: 10px">
+<button id="dllink" href="" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</button>
+</div></br>{% endif %}
+<div style="align-self: left">
 {% if page.visit_project %}
 <script>
     function project_link() {
