--- a/_layouts/applist.html
+++ b/_layouts/applist.html
@@ -65,7 +65,9 @@ layout: default
 </script>
 <div style="align-self: left">
 <button id="vplink" href="" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button>
-                 {% endif %}</div></div>
+</div>
+{% endif %}
+</div>
             
         {% endif %}
     </br></div>
