--- a/_layouts/otherlist.html
+++ b/_layouts/otherlist.html
@@ -38,7 +38,7 @@ layout: default
         
 <div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Download {{ page.title }}:</p></br>
-<div style="flow: left" class="otherlist-multi_button_flex"><div style="align-self: center; margin-right: 10px">
+<div style="flow: left" class="applist-multi_button_flex">
 {% if page.download %}
 <script>
     function download_link() {
@@ -49,9 +49,10 @@ layout: default
     }
     download_link();
 </script>
-<a id="dllink" href="" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
-                {% endif %}</div></br>
-<div style="align-self: center">
+<div style="align-self: left; margin-right: 10px">
+<button id="dllink" href="" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</button>
+</div></br>{% endif %}
+
 {% if page.visit_project %}
 <script>
     function project_link() {
@@ -62,13 +63,16 @@ layout: default
     }
     project_link();
 </script>
-<a id="vplink" href="" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
-                 {% endif %}</div></div>
+<div style="align-self: left">
+<button id="vplink" href="" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button>
+</div>
+{% endif %}
+</div>
             
         {% endif %}
     </br></div>
-                
-<div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="other_desc">
+    
+    <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="other_desc">
     <div style="font-weight: bold" class="column is-12">
     </br>
         <p class="title is-4">Description</p>
