--- a/_layouts/applist-multi.html
+++ b/_layouts/applist-multi.html
@@ -100,7 +100,7 @@ layout: default
     }
     project_link();
 </script>
-<button id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button>
+<button><a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a></button>
                 {% endif %}</div></div>
             
         {% endif %}
