--- a/_layouts/applist-multi.html
+++ b/_layouts/applist-multi.html
@@ -36,9 +36,9 @@ layout: default
                 {% endfor %}
                 </br></div></div></br>
     
-<div style="align-items: baseline; width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
+<div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Select version of {{ page.title }} to download:</p></br>
-<div style="flow: left" class="applist-multi_button_flex"><div style="margin-right: 10px">
+<div style="align-items: baseline; flow: left" class="applist-multi_button_flex"><div style="margin-right: 10px">
     <select class="download_btn" id="download_select">
         <option value="{{ page.download_1 }}">{{ page.name_download_1 }}</option>
       {% if page.download_2 %}
