--- a/_layouts/applist-multi.html
+++ b/_layouts/applist-multi.html
@@ -93,14 +93,14 @@ layout: default
 {% if page.visit_project %}
 <script>
     function project_link() {
-      var bits = ["https://"];
+      var bits = [""];
       bits.push("{{ page.visit_project }}");
       var url = bits.join("");
       document.getElementById("vplink").setAttribute("href",url);
     }
     project_link();
 </script>
-<a id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
+<a id="vplink" href="" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
                 {% endif %}</div></div>
             
         {% endif %}
