--- a/_layouts/umcslist-multi.html
+++ b/_layouts/umcslist-multi.html
@@ -38,7 +38,7 @@ layout: default
     
 <div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Select version of {{ page.title }} to download:</p></br>
-<div style="flow: left" class="applist-multi_button_flex"><div style="margin-right: 10px">
+<div style="align-items: baseline; flow: left" class="applist-multi_button_flex"><div style="margin-right: 10px">
     <select class="download_btn" id="download_select">
         <option value="{{ page.download_1 }}">{{ page.name_download_1 }}</option>
       {% if page.download_2 %}
@@ -93,19 +93,19 @@ layout: default
 {% if page.visit_project %}
 <script>
     function project_link() {
-      var bits = ["https://"];
+      var bits = [""];
       bits.push("{{ page.visit_project }}");
       var url = bits.join("");
       document.getElementById("vplink").setAttribute("href",url);
     }
     project_link();
 </script>
-<button id="vplink" href="https://" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</button>
+<a id="vplink" href="" class="project_btn" onclick="project_link();return true;"><i style="color: wheat" class="fas fa-external-link-alt"></i> Visit Project</a>
                 {% endif %}</div></div>
             
         {% endif %}
     </br></div>
-    
+      
 <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="umcs_desc">
     <div style="font-weight: bold" class="column is-12">
     </br>
