--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -7,24 +7,24 @@
 
     // Set default consent to 'denied' as a placeholder unless already accepted
     var cookiesAccepted = Cookies.get('cookiesAccepted');
-    if (cookiesAccepted === 'true') {
+    //if (cookiesAccepted === 'true') {
         gtag('consent', 'default', {
             ad_storage: 'granted',
             ad_user_data: 'granted',
             ad_personalization: 'granted',
             analytics_storage: 'granted',
         });
-    } else {
+    /* } else {
         gtag('consent', 'default', {
             ad_storage: 'denied',
             ad_user_data: 'denied',
             ad_personalization: 'denied',
             analytics_storage: 'denied',
         });
-    }
+    }*/
 </script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B0NR7Y7JCZ"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
