--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer style="height: 50px" class="footer">
+<footer style="max-height: 50px" class="footer">
     <div class="container">
 
         {% include follow.html %}
