--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer style="max-height: 50px" class="footer">
-    <div class="container">
+    <div style="max-height: 50px" class="container">
 
         {% include follow.html %}
 
