--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,19 @@
-<footer style="max-height: 50px" class="footer">
-    <div style="max-height: 50px" class="container">
-
-        {% include follow.html %}
-
-            <div style="float: left; width: 50%" class="has-text-left">
-                 <div>© 2024 The PS2Wiki Team</div>
-                <p class="">Powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://github.com/chrisrhymes/bulma-clean-theme">bulma-clean-theme</a>.</p>
-                <p class="">Downloads hosted at <a href="https://filen.io">Filen</a>.</p>
-            </div>
-            <div style="float: right; width: 50%; text-align: right" class="has-text-right">
-                <p class=""><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></p>
-                <p class=""><a title="LICENSE - PS2Wiki" href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/PS2Wiki_Provisional_LICENSE.txt">LICENSE</a></p>
-            </div>
+<footer class="footer">
+    <div style="max-height: 50px" class="footer_font_adjust">
+        <div class="container">
+    
+            {% include follow.html %}
+    
+                <div style="float: left; width: 50%" class="has-text-left">
+                     <div>© 2024 The PS2Wiki Team</div>
+                    <p class="">Powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://github.com/chrisrhymes/bulma-clean-theme">bulma-clean-theme</a>.</p>
+                    <p class="">Downloads hosted at <a href="https://filen.io">Filen</a>.</p>
+                </div>
+                <div style="float: right; width: 50%; text-align: right" class="has-text-right">
+                    <p class=""><a title="Terms of Service - PS2Wiki" href="https://ps2wiki.github.io/about.html#terms-of-service">Terms of Service</a></p>
+                    <p class=""><a title="LICENSE - PS2Wiki" href="https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/PS2Wiki_Provisional_LICENSE.txt">LICENSE</a></p>
+                </div>
+            
+        </div>
     </div>
 </footer>
