--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -32,7 +32,7 @@
     }
 
     gtag('js', new Date());
-    gtag('config', '{{ site.google_analytics }}');
+    gtag('config', 'G-B0NR7Y7JCZ');
 </script>
 
 <script>
