--- a/_layouts/applist-multi-ver.html
+++ b/_layouts/applist-multi-ver.html
@@ -36,4 +36,5 @@ layout: default
                     </p>
                 {% endfor %}
                 </br></div></div></br>
+        {% endif %}
 </div>
