--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -24,7 +24,7 @@
     }*/
 </script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GJJQMFYCKC"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B0NR7Y7JCZ"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -32,7 +32,7 @@
     }
 
     gtag('js', new Date());
-    gtag('config', 'G-GJJQMFYCKC');
+    gtag('config', 'G-B0NR7Y7JCZ');
 </script>
 
 <script>
