--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -17,7 +17,7 @@ layout: default
     letter-spacing: -1px;
   }
   body {
-  background-image: url('/assets/images/404_rsod.png');
+  background-image: url('https://github.com/ps2wiki/ps2wiki.github.io/blob/upstream/assets/images/404_rsod.png?raw=true');
   background-position: no-repeat;
   background-size: cover;
 }
