--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -4,6 +4,7 @@ layout: default
 
 <style>
   .container {
+    top: 0px;
     text-align: center;
     color: #9dac97;
     text-shadow: 0 0 3px #000000, 0 0 5px #000000;
