--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,10 +1,11 @@
 ---
 layout: default
+show_sidebar: false
+hide_hero: true
 ---
 
 <style>
   .container {
-    position: absolute;
     top: 0px;
     text-align: center;
     color: #9dac97;
