--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -5,8 +5,9 @@ hide_hero: true
 ---
 
 <style>
-  .container {
+  .errortxt {
     top: 0px;
+    height: 100%;
     text-align: center;
     color: #9dac97;
     text-shadow: 0 0 3px #000000, 0 0 5px #000000;
@@ -19,7 +20,7 @@ hide_hero: true
   }
 </style>
 
-<div class="container">
+<div class="errortxt">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
