--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -7,7 +7,7 @@ hide_hero: true
 <style>
   .errortxt {
     top: 0px;
-    height: 100%;
+    height: 90vh;
     text-align: center;
     color: #9dac97;
     text-shadow: 0 0 3px #000000, 0 0 5px #000000;
