--- a/_layouts/applist.html
+++ b/_layouts/applist.html
@@ -36,7 +36,7 @@ layout: default
                 {% endfor %}
                 </br></div></div>
         
-<div style="width: 100%; overflow: auto; flow: left; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px" class="column is-12"></br>
+<div style="width: 100%; overflow: auto; flow: left; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px" class="app_desc"></br>
     <p class="title is-5 has-text-left">Download {{ page.title }}:</p></br>
 <div style="flow: left; align-items: baseline;" class="applist-multi_button_flex">
 {% if page.download %}
