--- a/_layouts/rteslist.html
+++ b/_layouts/rteslist.html
@@ -36,7 +36,7 @@ layout: default
                 {% endfor %}
                 </br></div></div>
         
-<div style="width: 100%; overflow: auto; flow: left; margin-left: 10px; margin-right: 10px; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
+<div style="width: 100%; padding: 10px"><div style="width: 100%; overflow: auto; flow: left; padding: 20px; border-style: solid; border-color: wheat; border-width: 2px; border-radius: 10px"></br>
     <p class="title is-5 has-text-left">Download {{ page.title }}:</p></br>
 <div style="flow: left; align-items: baseline;" class="applist-multi_button_flex">
 {% if page.download %}
@@ -69,7 +69,7 @@ layout: default
 {% endif %}
 </div>
 {% endif %}
-</br></div>
+</br></div></div>
          
 <div style="width: 100%; padding: 10px"><div style="border-radius: 10px; padding: 10px; border: 2px outset wheat" class="rtes_desc">
     <div style="font-weight: bold" class="column is-12">
