--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -17,7 +17,7 @@ show_sidebar: false
     {% for applist in sorted_applistings %}
         <div class="column is-4-desktop is-6-tablet">
             <a href="{{ applist.url | relative_url }}">
-                <div style="border: 3px outset wheat; min-height: 600px" class="card">
+                <div style="border: 3px outset wheat; min-height: 550px" class="card">
                     {% if applist.image %}
                         <div class="card-image">
                             <figure class="image is-4by3">
@@ -41,7 +41,7 @@ show_sidebar: false
                             </script>
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
-                        <div style="float: right; bottom: 20px"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                        <div style="float: right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
                     </div>
                 </div>
             </a>
