--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -41,7 +41,9 @@ show_sidebar: false
                             </script>
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
-                        <div style="float: right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                        <div style="bottom: 0px">
+                            <div style="float: right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                        </div>
                     </div>
                 </div>
             </a>
