--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -42,8 +42,8 @@ show_sidebar: false
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
                         </div>
-                        <div style="bottom: 0px; position: absolute; padding: 20px">
-                            <div style="text-align: right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                        <div style="width: 100%; bottom: 0px; position: absolute; padding: 20px">
+                            <div style="width: 100%; text-align: right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
                         </div>
                 </div>
             </a>
