--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -25,7 +25,7 @@ show_sidebar: false
                             </figure>
                         </div>
                     {% endif %}
-                    <div class="card-content">
+                    <div style="margin-bottom: 20px" class="card-content">
                         <p class="title is-4">{{ applist.title }}</p>
                         <p class="subtitle is-4">{{ applist.subtitle }}</p></br>
                        <!--
