--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -43,7 +43,7 @@ show_sidebar: false
                             {% endif %}</p></div> -->
                         </div>
                         <div style="width: 100%; bottom: 0px; position: absolute; padding: 20px">
-                            <div style="width: 100%; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
+                            <div style="bottom: 0px; width: 100%; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
                         </div>
                 </div>
             </a>
