--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -42,9 +42,7 @@ show_sidebar: false
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
                         </div>
-                        <div style="width: 100%; bottom: 0px; position: absolute; padding: 20px">
-                            <div style="bottom: 0px; width: 100%; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
-                        </div>
+                        <div style="position: absolute; padding: 20px; margin-top: 30px; width: 100%; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br></br>
                 </div>
             </a>
         </div>
