--- a/_layouts/otherlist-category.html
+++ b/_layouts/otherlist-category.html
@@ -42,7 +42,7 @@ show_sidebar: false
                             <a id="dllink" href="#" class="download_btn" onclick="download_link();return true;"><i style="color: wheat" class="fas fa-download"></i> Download</a>
                             {% endif %}</p></div> -->
                         </div>
-                        <div style="position: absolute; padding-top: 0px; padding: 20px; width: 100%; bottom: 0px; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ applist.version }}</p></div></br>
+                        <div style="position: absolute; padding-top: 0px; padding: 20px; width: 100%; bottom: 0px; text-align: bottom | right; align-self: flex-end"><p class="title is-5 has-text-right">{{ otherlist.version }}</p></div></br>
                 </div>
             </a>
         </div>
