--- a/_layouts/applist-category.html
+++ b/_layouts/applist-category.html
@@ -2,7 +2,8 @@
 layout: default
 show_sidebar: false
 ---
-
+{% if applist.hidden %}
+{% if applist.hidden != true %}
 <div class="columns is-multiline">
     <div class="column is-12">
         {{ page.content }}
@@ -48,3 +49,5 @@ show_sidebar: false
         </div>
     {% endfor %}
 </div>
+{% endif %}
+{% endif %}
