--- a/_layouts/gameslist-category.html
+++ b/_layouts/gameslist-category.html
@@ -15,6 +15,7 @@ show_sidebar: false
     {% endif %}
 
     {% for gameslist in sorted_gameslistings %}
+    {% if gameslist.hidden != true %}
         <div class="column is-4-desktop is-6-tablet">
             <a href="{{ gameslist.url | relative_url }}">
                 <div style="border: 3px outset wheat; min-height: 550px" class="card">
@@ -47,4 +48,5 @@ show_sidebar: false
             </a>
         </div>
     {% endfor %}
+    {% endif %}
 </div>
